--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>Welcome to 2Q Portfolio</h1>
     <nav>
         <ul>
-            <li><a href = "#about" About Me></li>
+            <li><a href = "#about"> About Me</a></li>
         </ul>
     </nav>
     </header>
