--- a/public/2Q1GLiPadilla.html
+++ b/public/2Q1GLiPadilla.html
@@ -17,13 +17,21 @@
 
 <body>
     <header>
-        <h1> Welcome to the First Four Nations of Teyvat! </h1>
+        <h1> Welcome to the First Four Nations of Teyvat, Traveler! </h1>
+
+            <p><b>Start your journey through Teyvat by visiting the first four nations that await your arrival.  
+                These guides are here to inform you of the nation you will set foot on, its histories, its Archons, and other information that will help in your travelling.  
+                Starting with Mondstadt, The City of Freedom, to the harbors of Liyue, then the lonesome island of Inazuma, then to the knowledge filled nation of Sumeru.  
+                Be prepared for the journey that awaits you, dear traveler!
+            </p></b>
+        
+        <h1> Current nation you are exploring: Nation of Sumeru</h1>
+        <p><b>Other nations you will be exploring: </b></p>
         <nav>
             <ul>
               <li> <a href="#about"> Nation of Mondstadt </a></li>
               <li> <a href="#about"> Nation of Liyue </a></li>
               <li> <a href="#about"> Nation of Inazuma </a></li>
-              <li> <a href="#about"> Nation of Sumeru </a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +41,36 @@
         width = "600 px"
         height = "600 px"
         />
-    <h1> The History and Archon of Sumeru </h1>
+    <h1> About Sumeru: </h1>
+        <p>     The nation of Sumeru is known for housing the Sumeru Akademiya, 
+            Sumeru’s main governing body and Teyvat’s largest and most prestigious academic center.  
+            It is located in Sumeru City, also known as the “City of Wisdom”.  Sumeru’s culture is mainly centered on studying and research.
+            Aside from this, Sumeru's landscape mainly consists of deserts and rainforests.  
+            The nation worships Lesser Lord Kusanali, the Dendro Archon and God of Wisdom.  
+            She is also referred to as “Buer” or “Nahida”.  Lesser Lord Kusanali became the successor of Greater Lord Rukkhadevata, 
+            the previous Dendro Archon and God of Wisdom, after she perished in the Cataclysm 500 years ago.  
+            The former God of Wisdom passed away after trying to remove the forbidden knowledge from the Irminsul, 
+            the tree that held all information and memories of Teyvat.  Before she died, she took the purest branch from Irminsul to create her successor, Lesser Lord Kusanali.  
+            After all memories of Greater Lord Rukkhadevata were erased from Teyvat, Lesser Lord Kusanali is believed by all,
+            including herself, to have always been the original Dendro Archon.
+        </p>
+
+    <h1> Sumeru's Lore: </h1>
+        <p> In the beginning, Nabu Malikata, King Deshret, and Greater Lord Rukkhadevata were known as the three God-Kings of Sumeru who once built a city together.  
+            However, Nabu Malikata eventually passes away.  Then, the city that the God-Kings built together was engulfed by a sandstorm, leading to its abandonment.  
+            After Nabu Malikata’s death, King Deshret and Greater Lord Rukkhadevata parted ways and created their own civilizations.  
+            Deshret rules over the Great Red Sand, while Greater Lord Rukkhadevata creates the Varuna Contraption that turns parts of the desert into a rainforest.  
+            The rainforest further flourishes with the help of her followers.  Sumeru City was then established on what is known as the Divine Tree.
+            <br><br>
+            The people of Sumeru, mainly the adults, take pride in being unable to have dreams, due to their core values of wisdom and rationality.  
+            Only children had dreams.  Knowledge in Sumeru was managed through the Akasha system, where people used Akasha terminals to access information.  
+            Only adults owned Akasha terminals.  The Akasha system was powered by the Gnosis of Greater Lord Rukkhadevata.  
+            After the termination of the Akasha System, the people of Sumeru were able to dream once more.
+        </p>
+
+
+
+
 </body>
 </html>
 
