last commit for now

--- a/public/2Q1GLiPadilla.html
+++ b/public/2Q1GLiPadilla.html
@@ -36,11 +36,8 @@
         </nav>
     </header>
 
-    <p> Map of Sumeru: </p>
-    <img src = "../assets/sumeru map.webp" 
-        width = "600 px"
-        height = "600 px"
-        />
+    <hr />
+
     <h1> About Sumeru: </h1>
         <p>     The nation of Sumeru is known for housing the Sumeru Akademiya, 
             Sumeru’s main governing body and Teyvat’s largest and most prestigious academic center.  
@@ -55,12 +52,26 @@
             including herself, to have always been the original Dendro Archon.
         </p>
 
+        <h3> Map of Sumeru: </h3>
+        <img src = "../assets/sumeru map.webp" 
+            width = "600 px"
+            height = "600 px"
+        />
+        <h3> Sumeru City:</h3>
+        <img src = "../assets/Sumeru_City.webp" 
+            width = "800 px"
+            height = "450 px"
+        />
+
     <h1> Sumeru's Lore: </h1>
         <p> In the beginning, Nabu Malikata, King Deshret, and Greater Lord Rukkhadevata were known as the three God-Kings of Sumeru who once built a city together.  
-            However, Nabu Malikata eventually passes away.  Then, the city that the God-Kings built together was engulfed by a sandstorm, leading to its abandonment.  
+            However, Nabu Malikata eventually passed away.  Then, the city that the God-Kings built together was engulfed by a sandstorm, leading to its abandonment.  
             After Nabu Malikata’s death, King Deshret and Greater Lord Rukkhadevata parted ways and created their own civilizations.  
-            Deshret rules over the Great Red Sand, while Greater Lord Rukkhadevata creates the Varuna Contraption that turns parts of the desert into a rainforest.  
-            The rainforest further flourishes with the help of her followers.  Sumeru City was then established on what is known as the Divine Tree.
+            Deshret rules over the Great Red Sand, while Greater Lord Rukkhadevata creates the Varuna Contraption that turns parts of the desert into a rainforest, which further flourishes with the help of her followers.  
+            Sumeru City was then established on what is known as the Divine Tree.
+            <br><br>
+            King Deshret eventually succumbs to the "poison" of forbidden knowledge.  The forbidden knowledge brought calamities upon Sumeru and its people.
+            Rukkhadevata then tried to save King Deshret's people by creating the Akasha system, which united people's wisdom.
             <br><br>
             The people of Sumeru, mainly the adults, take pride in being unable to have dreams, due to their core values of wisdom and rationality.  
             Only children had dreams.  Knowledge in Sumeru was managed through the Akasha system, where people used Akasha terminals to access information.  
@@ -68,6 +79,54 @@
             After the termination of the Akasha System, the people of Sumeru were able to dream once more.
         </p>
 
+    <table border="1px" style="width:50%;">
+        <tr>
+            <th>Characters</th>
+            <th>Roles/Factions</th>
+            <th>Vision/Element</th>
+        </tr>
+        <tr>
+            <td>Collei</td>
+            <td>Trainee Forest Ranger</td>
+            <td>Dendro</td>
+        </tr>
+        <tr>
+            <td>Tighnari</td>
+            <td>Chief Officer of the Forest Rangers</td>
+            <td>Dendro</td>
+        </tr>
+        <tr>
+            <td>Cyno</td>
+            <td>General Mahamatra of the Sumeru Akademiya</td>
+            <td>Electro/Lighting</td>
+        </tr>
+        <tr>
+            <td>Dehya</td>
+            <td>Member of the Eremites</td>
+            <td>Pyro/Fire</td>
+        </tr>
+        <tr>
+            <td>Candace</td>
+            <td>Guardian of Aaru Village</td>
+            <td>Hydro/Water</td>
+        </tr>
+        <tr>
+            <td>Al Haitham</td>
+            <td>Member of the Haravatat of the Sumeru Akademiya and the Akademiya's Scribe</td>
+            <td>Dendro</td>
+        </tr>
+        <tr>
+            <td>Kaveh</td>
+            <td>Architect and student of the Kshahrewar Darshan of the Sumeru Akademiya</td>
+            <td>Dendro</td>
+        </tr>
+        <tr>
+            <td>Nilou</td>
+            <td>Dancer of Zubayr Theater</td>
+            <td>Hydro/Water</td>
+        </tr>
+
+    </table>
 
 
 
