--- a/index.html
+++ b/index.html
@@ -10,19 +10,39 @@
     <title>2Q Portfolio</title>
 
     <link rel = "stylesheet" href = "styles.css">
-    <link rel = "icon" href="cute.sticker.jpg" type = "image/x-icon">
+    <link rel = "icon" href="../assets/cute.sticker.jpg" type = "image/x-icon">
     
     <script src="script.js" defer></script>
 </head>
 <body>
     <header>
+        <div>
+            <img src="../assets/cute.sticker.jpg" alt="icon" title="Cute Sticker"
+            width = "100px"
+            height = "90px"  
+            />
+            <h1>Welcome to 2Q Portfolio</h1>
+        </div>
 
-    <h1>Welcome to 2Q Portfolio</h1>
-    <nav>
-        <ul>
-            <li><a href = "#about"> About Me</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li><a href = "../public/2Q1GLiPadilla.html"> First Graded</a></li>
+                <li><a href ="#"> Second Graded </a></li>
+                <li><a href ="#"> Third Graded </a></li>
+                <li><a href ="#"> Acces to our Project </a></li>
+            </ul>
+        </nav>
     </header>
+
+    <section>
+        <hr/>
+        <article>
+            
+        </article>
+    </section>
+    <footer>
+        <hr/>
+        <p>Copyright <span>&copy; Padilla</span></p>
+    </footer>
 </body>
 </html>
