--- a/public/2Q1GLiPadilla.html
+++ b/public/2Q1GLiPadilla.html
@@ -88,12 +88,12 @@
         <tr>
             <td>Collei</td>
             <td>Trainee Forest Ranger</td>
-            <td>Dendro</td>
+            <td>Dendro/Grass</td>
         </tr>
         <tr>
             <td>Tighnari</td>
             <td>Chief Officer of the Forest Rangers</td>
-            <td>Dendro</td>
+            <td>Dendro/Grass</td>
         </tr>
         <tr>
             <td>Cyno</td>
@@ -113,12 +113,12 @@
         <tr>
             <td>Al Haitham</td>
             <td>Member of the Haravatat of the Sumeru Akademiya and the Akademiya's Scribe</td>
-            <td>Dendro</td>
+            <td>Dendro/Grass</td>
         </tr>
         <tr>
             <td>Kaveh</td>
             <td>Architect and student of the Kshahrewar Darshan of the Sumeru Akademiya</td>
-            <td>Dendro</td>
+            <td>Dendro/Grass</td>
         </tr>
         <tr>
             <td>Nilou</td>
