--- a/public/2Q1GLiPadilla.html
+++ b/public/2Q1GLiPadilla.html
@@ -29,6 +29,7 @@
         <p><b>Other nations you will be exploring: </b></p>
         <nav>
             <ul>
+              <li> <a href="../index.html"> Home </a></li>
               <li> <a href="#about"> Nation of Mondstadt </a></li>
               <li> <a href="#about"> Nation of Liyue </a></li>
               <li> <a href="#about"> Nation of Inazuma </a></li>
