--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href = "../public/2Q1GLiPadilla.html"> First Graded</a></li>
                 <li><a href ="#"> Second Graded </a></li>
                 <li><a href ="#"> Third Graded </a></li>
-                <li><a href ="#"> Acces to our Project </a></li>
+                <li><a href ="#"> Access to our Project </a></li>
             </ul>
         </nav>
     </header>
