--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <nav>
             <ul>
-                <li><a href = "../public/2Q1GLiPadilla.html"> First Graded</a></li>
+                <li><a href = "./public/2Q1GLiPadilla.html"> First Graded</a></li>
                 <li><a href ="#"> Second Graded </a></li>
                 <li><a href ="#"> Third Graded </a></li>
                 <li><a href ="#"> Access to our Project </a></li>
