--- a/public/2Q1GLiPadilla.html
+++ b/public/2Q1GLiPadilla.html
@@ -19,11 +19,11 @@
     <header>
         <h1> Welcome to the First Four Nations of Teyvat, Traveler! </h1>
 
-            <p><b>Start your journey through Teyvat by visiting the first four nations that await your arrival.  
+            <h3>Start your journey through Teyvat by visiting the first four nations that await your arrival.  
                 These guides are here to inform you of the nation you will set foot on, its histories, its Archons, and other information that will help in your travelling.  
                 Starting with Mondstadt, The City of Freedom, to the harbors of Liyue, then the lonesome island of Inazuma, then to the knowledge filled nation of Sumeru.  
                 Be prepared for the journey that awaits you, dear traveler!
-            </p></b>
+            </h3>
         
         <h1> Current nation you are exploring: Nation of Sumeru</h1>
         <p><b>Other nations you will be exploring: </b></p>
@@ -53,12 +53,6 @@
             including herself, to have always been the original Dendro Archon.
         </p>
 
-        <h3> Map of Sumeru: </h3>
-        <img src = "../assets/sumeru map.webp" 
-            width = "600 px"
-            height = "600 px"
-        />
-        <h3> Sumeru City:</h3>
         <img src = "../assets/Sumeru_City.webp" 
             width = "800 px"
             height = "450 px"
@@ -129,7 +123,11 @@
 
     </table>
 
-
+    <hr/>
+    <footer>
+    References:
+    <br>Wiki, C. T. G. I. (n.d.). Sumeru/History. Genshin Impact Wiki. https://genshin-impact.fandom.com/wiki/Sumeru/History
+    </footer>
 
 </body>
 </html>
