--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div>
-            <img src="../assets/cute.sticker.jpg" alt="icon" title="Cute Sticker"
+            <img src="./assets/cute.sticker.jpg" alt="icon" title="Cute Sticker"
             width = "100px"
             height = "90px"  
             />
