--- a/public/2Q1GLiPadilla.html
+++ b/public/2Q1GLiPadilla.html
@@ -57,6 +57,10 @@
             width = "800 px"
             height = "450 px"
         />
+        <nav>
+            <li><a href="https://youtu.be/FMF60X96Ix4?si=hBHqhu0_m2zQbaqh"> Explore More of Sumeru's Scenery Here!</a></li>
+            <li><a href="https://img.game8.co/3677458/1f573319a3d4c875ed5ef28fafa1fbb8.png/original"> See the Map of Sumeru Here!</a></li>
+        </nav>
 
     <h1> Sumeru's Lore: </h1>
         <p> In the beginning, Nabu Malikata, King Deshret, and Greater Lord Rukkhadevata were known as the three God-Kings of Sumeru who once built a city together.  
