--- a/public/2Q1GLiPadilla.html
+++ b/public/2Q1GLiPadilla.html
@@ -84,7 +84,7 @@
             Sumeru City was then established on what is known as the Divine Tree.
             <br><br>
             King Deshret eventually succumbs to the "poison" of forbidden knowledge.  The forbidden knowledge brought calamities upon Sumeru and its people.
-            Rukkhadevata then tried to save King Deshret's people by creating the Akasha system which was powered by her Gnosis, which united people's wisdom.
+            Rukkhadevata then tried to save King Deshret's people by creating the Akasha system, powered by her Gnosis, which united people's wisdom.
             <br><br>
             The people of Sumeru, mainly the adults, take pride in being unable to have dreams, due to their core values of wisdom and rationality.  
             Only children had dreams.  Knowledge in Sumeru was managed through the Akasha system, where adults used Akasha terminals to access information.  
@@ -103,7 +103,7 @@
         </tr>
          <tr>
             <td>Nahida</td>
-            <td>Also known as Lesser Lord Kusanali, One of the Seven Archons</td>
+            <td>Also known as Lesser Lord Kusanali, Current Dendro Archon and God of Wisdom</td>
             <td>Dendro/Plants</td>
         </tr>
         <tr>
@@ -138,7 +138,7 @@
         </tr>
         <tr>
             <td>Kaveh</td>
-            <td>Architect and student of the Kshahrewar Darshan of the Sumeru Akademiya</td>
+            <td>Architect and graduate of the Kshahrewar Darshan of the Sumeru Akademiya</td>
             <td>Dendro/Plants</td>
         </tr>
         <tr>
