--- a/public/2Q1GLiPadilla.html
+++ b/public/2Q1GLiPadilla.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name = "viewport" content="width+device-width, inital-scale=1.0">
-    <meta name ="description" content="2Q Portfolio">
-    <meta name = "keywords" content = "2Q, Portfolio, Projects, Web Development">
+    <meta name ="description" content="2Q Portfolio Sumeru">
+    <meta name = "keywords" content = "2Q, Portfolio, Projects, Sumeru, Genshin Impact, Teyvat">
     <meta name = "author" content="Sofia Ashlie Q. Padilla">
 
     <title>The Four Nations of Teyvat</title>
