--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul>
                 <li><a href = "./public/2Q1GLiPadilla.html"> First Graded</a></li>
                 <li><a href = "./public/Q21NGLithiumPadilla.html"> First Non-Graded Exercise</a></li>
-                <li><a href ="./public/2Q2GLiPadilla.htmlG"> Second Graded </a></li>
+                <li><a href ="./public/2Q2GLiPadilla.html"> Second Graded </a></li>
                 <li><a href ="#"> Third Graded </a></li>
                 <li><a href ="#"> Access to our Project </a></li>
             </ul>
