3rd quarted 2nd graded

--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
             width = "100px"
             height = "90px"  
             />
-            <h1>Welcome to 2Q Portfolio</h1>
+            <h1>Welcome to 3Q Portfolio</h1>
         </div>
 
+        <h2> Second Quarter </h2>
         <nav>
             <ul>
                 <li><a href = "./public/2Q1GLiPadilla.html"> First Graded</a></li>
                 <li><a href = "./public/Q21NGLithiumPadilla.html"> First Non-Graded Exercise</a></li>
                 <li><a href ="./public/2Q2GLiPadilla.html"> Second Graded </a></li>
-                <li><a href ="#"> Third Graded </a></li>
-                <li><a href ="#"> Access to our Project </a></li>
+            </ul>
+        </nav>
+        <hr>
+        <h2> Third Quarter </h2>
+        <nav>
+            <ul>
+            <li><a href ="./public/Q3_2GLithiumPadilla.html"> Second Graded </a></li>
             </ul>
         </nav>
     </header>
 
-    <section>
-        <hr/>
-        <article>
-            
-        </article>
-    </section>
     <footer>
         <hr/>
         <p>Copyright <span>&copy; Padilla</span></p>
